--- a/ardublockly/index.html
+++ b/ardublockly/index.html
@@ -62,11 +62,13 @@
 
 <body>
   <!-- Horizontal Navigation bar -->
-  <nav class="nav-fixed arduino_teal">
+  <nav class="nav-fixed mchp_atmel">
     <div class="nav-wrapper container">
       <a class="show-on-large button-collapse" href="#" data-activates="slide-out" id="button-collapse"><i class="mdi-navigation-menu"></i></a>
       <a id="logo-container" class="brand-logo">
-        <span class="app_title">Ardublockly:</span>
+<!--        <span class="app_title">Ardublockly:</span> -->
+        <span class="app_title"><img src="img/Atmel_and_Microchip_Logo.png" /></span>
+
         <!-- Sketch name editable text field -->
         <span class="sketch_name_wrapper">
           <i class="mdi-image-edit sketch_name_icon"></i>
